test/fail/interpolation/interp_no_value.lily
#[
SyntaxError: Empty interpolation block.
    from interp_no_value.lily:6:
]#

var v = $"^(  )"
